compiler/test/snapshot/infer-expr/error-when-updating-structs.exp
Error when updating structs.

SOURCE:
{
  struct Foo { a: Int }

  let x = Foo { a: 1 };
  x.a = "foo"
}

OUTPUT:
TODO updating struct fields should be supported.

5|    x.a = "foo"
      ^^^^^^^^^^^